examples/b2c/checkout/order-confirmation-email-flow/objects/OrderSummary.object
<CustomObject>
    <fields>
        <fullName>OCE_Account_First_Name__c</fullName>
        <label>OCE Account First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Account_Last_Name__c</fullName>
        <label>OCE Account Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Order_Items__c</fullName>
        <label>OCE Order Items</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OCE_Order_Url__c</fullName>
        <label>OCE Summary Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Order_Total__c</fullName>
        <formula>TotalAdjustedProductAmount +  TotalAdjustedDeliveryAmount  +  TotalTaxAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCE Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCE_Payment_Method__c</fullName>
        <label>OCE Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Shipping_Address__c</fullName>
        <label>OCE Shipping Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OCE_Shipping_Method__c</fullName>
        <label>OCE Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCE_Order_Url__c</fullName>
        <label>OCE Summary Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>